engine-net-2/examples/Errors/MatchRuleUnknownCompiled.grg
#include "Rules.grg"

sequence s1
{
	(n:N)=init ;> { m:match<tt>=[?t][0]; v:int = m.b } 
}
